# Smart_detection

./: .gitignore  README.md
backend/: DockerFile  main.py  pyproject.toml  requirements.txt
backend/db/: config.py
backend/routers/: image_process.py
backend/services/: encode_decode.py  face_compare.py  feature_extraction.py  gender.py  process_faces.py  race.py
backend/utils/: age.py  face_extraction.py  gender.py  race.py
backend2/routers/: image_process.py
backend2/services/: face_extraction.py
