[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "deepface>=0.0.95",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "insightface>=0.7.3",
    "numpy>=2.3.3",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "supabase>=2.18.1",
    "tf-keras>=2.20.1",
    "uvicorn[standard]>=0.35.0",
]
